--- a/index.html
+++ b/index.html
@@ -2,23 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cycle de vie</title>
+    <title>Romano Converter</title>
   </head>
   <body>
-    <div>
-      <h2>Convert</h2>
-      <input type="text" id="numberInput" placeholder="Enter a number" />
-      <button id="convertButton">Convert</button>
-      <p id="resultConvert"></p>
-    </div>
-    <div>
-      <h2>Reverted</h2>
-      <input type="text" id="numberRevertInput" placeholder="Enter a number" />
-      <button id="revertConvertButton">Convert</button>
-      <p id="resultReverted"></p>
-    </div>
-    </div>
-    <script type="module" src="index.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
